--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,29 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+form#game-settings {
+  max-width: 37.5rem;
+  margin: 30px auto;
+  text-align: center;
+}
+
+form#game-settings button#button-start {
+  margin-top: 1.875rem;
+  padding: 10px 1.875rem;
+  border-radius: 0.3125rem;
+  background-color: #1daf18;
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px #157412;
+  border-color: #757474;
+  cursor: pointer;
+}
+
+form#game-settings button#button-start:hover {
+  animation-name: swing;
+  animation-duration: 300ms;
+}
 
 .game-container {
   max-width: 62.5rem;
@@ -36,4 +59,22 @@
   line-height: calc(5rem - 1.25rem);
   text-align: center;
   cursor: pointer;
+}
+
+@keyframes swing {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(0);
+  }
+  75% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
